tests/baselines/reference/decoratorOnClassAccessor6(strict=true).errors.txt
decoratorOnClassAccessor6.ts(4,5): error TS7008: Member 'public' implicitly has an 'any' type.
decoratorOnClassAccessor6.ts(4,12): error TS1436: Decorators must precede the name and all keywords of property declarations.


==== decoratorOnClassAccessor6.ts (2 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        public @dec set accessor(value: number) { }
        ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
               ~
!!! error TS1436: Decorators must precede the name and all keywords of property declarations.
    }